[project]
name = "receiving-sms"
version = "0.1.0"
description = "Service for receiving SMS via Twilio webhooks"
authors = [
    {name = "Braun Maxim"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.123.5,<0.124.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "twilio (>=9.0.0,<10.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = ["."]